--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "storets",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "start:dev": "nodemon",
     "build": "npx tsc"
   },
