--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.4",
     "sharp": "^0.32.1"
