--- a/.env
+++ b/.env
@@ -1,19 +1,21 @@
 # MYSQL CONFIG
 SQL_HOST="localhost"
 SQL_DATABASE="StoreTS"
+	# MYSQL COMMANDS: 
+		# SHOW VARIABLES LIKE "socket";
 SQL_SOCKET_PATH="/var/lib/mysql/mysql.sock"
 
 # MYSQL ORDINARY_USER (PRIVILEGES: SELECT, UPDATE) CONFIG
 	# MYSQL COMMANDS: 
-		# > CREATE USER 'ordinary'@'localhost' IDENTIFIED BY 'GjgFbrg2uAt42q%JeFJkKe9ZYvFEpbBHoK03s9%R'
-		# > GRANT SELECT, UPDATE ON StoreTS.* TO 'ordinary'@'localhost';
+		# > CREATE USER "ordinary"@"localhos" IDENTIFIED BY "GjgFbrg2uAt42q%JeFJkKe9ZYvFEpbBHoK03s9%R"
+		# > GRANT SELECT, UPDATE ON StoreTS.* TO "ordinary"@"localhost";
 SQL_ORDINARY_USER="ordinary"
 SQL_ORDINARY_PASSWORD="GjgFbrg2uAt42q%JeFJkKe9ZYvFEpbBHoK03s9%R"
 
 # MYSQL MASTER_USER (PRIVILEGES: INSERT, SELECT, UPDATE, DELETE) CONFIG
 	# MYSQL COMMANDS:
-		# > CREATE USER 'master'@'localhost' IDENTFIED BY '&y5^PV5a2gwuqFgBEKBX9ueKWjD&L9QfT3i&Bjk&'
-		# > GRANT INSERT, SELECT, UPDATE, DELETE ON StoreTS.* TO 'master'@'localhost'
+		# > CREATE USER "master"@"localhost" IDENTFIED BY "&y5^PV5a2gwuqFgBEKBX9ueKWjD&L9QfT3i&Bjk&";
+		# > GRANT INSERT, SELECT, UPDATE, DELETE ON StoreTS.* TO "master"@"localhost";
 SQL_MASTER_USER="master"
 SQL_MASTER_PASSWORD="&y5^PV5a2gwuqFgBEKBX9ueKWjD&L9QfT3i&Bjk&"
 
