--- a/root/package.json
+++ b/root/package.json
@@ -12,17 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.341.0",
-    "@aws-sdk/s3-request-presigner": "^3.341.0",
     "@types/express": "^4.17.17",
-    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mysql2": "^3.3.2",
-    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "nodemon": "^2.0.22"
   }
 }
