--- a/admin/package.json
+++ b/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storets-root",
+  "name": "storets-admin",
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.ts",
@@ -17,7 +17,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "sass": "^1.62.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "sass": "^1.62.1"
   }
 }
