--- a/endPoints/adminEndPoint/package.json
+++ b/endPoints/adminEndPoint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storets-admin",
+  "name": "admin-end-point",
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.ts",
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "ts-node": "^10.9.1"
