--- a/endPoints/adminEndPoint/package.json
+++ b/endPoints/adminEndPoint/package.json
@@ -15,9 +15,12 @@
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "nodemon": "^2.0.22",
     "sass": "^1.62.1"
   }
