--- a/endPoints/adminEndPoint/package.json
+++ b/endPoints/adminEndPoint/package.json
@@ -17,11 +17,16 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.1",
+    "storets-admin": "^1.0.1",
+    "storets-middleware": "^1.0.0",
+    "storets-s3": "^1.0.0",
+    "storets-sql": "^1.0.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/multer": "^1.4.7",
     "nodemon": "^2.0.22",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "typescript": "^5.1.3"
   }
 }
