--- a/endPoints/rootEndPoint/package.json
+++ b/endPoints/rootEndPoint/package.json
@@ -14,10 +14,13 @@
     "@types/express": "^4.17.17",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "storets-middleware": "^1.0.1",
+    "storets-s3": "^1.0.0",
+    "storets-sql": "^1.0.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "sass": "^1.62.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "sass": "^1.62.1"
   }
 }
