--- a/endPoints/adminEndPoint/package.json
+++ b/endPoints/adminEndPoint/package.json
@@ -15,6 +15,7 @@
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.1",
     "storets-admin": "^1.0.1",
