--- a/endPoints/adminEndPoint/package.json
+++ b/endPoints/adminEndPoint/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "sharp": "^0.32.1",
     "storets-admin": "^1.0.1",
     "storets-middleware": "^1.0.0",
