--- a/endpoints/adminEndpoint/package.json
+++ b/endpoints/adminEndpoint/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-mysql-session": "^2.1.3",
     "@types/express-session": "^1.17.7",
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-mysql-session": "^3.0.0",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
