--- a/endpoints/adminEndpoint/package.json
+++ b/endpoints/adminEndpoint/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.17",
     "@types/express-mysql-session": "^2.1.3",
     "@types/express-session": "^1.17.7",
+    "bcrypt": "^5.0.1",
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -31,7 +32,7 @@
   },
   "devDependencies": {
     "@types/multer": "^1.4.7",
-    "nodemon": "^2.0.22",
+    "nodemon": "^1.14.9",
     "sass": "^1.62.1",
     "typescript": "^5.1.3"
   }
