--- a/endpoints/adminEndpoint/package.json
+++ b/endpoints/adminEndpoint/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "start": "ts-node ./src/index.ts",
-    "start:dev": "nodemon"
+    "start": "ts-node ./src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,7 @@
     "@types/express": "^4.17.17",
     "@types/express-mysql-session": "^2.1.3",
     "@types/express-session": "^1.17.7",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
@@ -31,9 +31,6 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/multer": "^1.4.7",
-    "nodemon": "^2.0.22",
-    "sass": "^1.62.1",
-    "typescript": "^5.1.3"
+    "sass": "^1.62.1"
   }
 }
