--- a/endpoints/rootEndpoint/package.json
+++ b/endpoints/rootEndpoint/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "start": "ts-node ./src/index.ts",
-    "start:dev": "nodemon"
+    "start": "ts-node ./src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +20,6 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
     "sass": "^1.62.1"
   }
 }
