--- a/endpoints/adminEndpoint/package.json
+++ b/endpoints/adminEndpoint/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/express-mysql-session": "^2.1.3",
     "@types/express-session": "^1.17.7",
